--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -1,5 +1,5 @@
 html { 
-  background: url(img.jpg) no-repeat center center fixed; 
+  background: url(../images/img.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
